# sph

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LEGAL
SPH/: CMakeLists.txt  SPH.hpp
data/: dambreak.txt  default.txt  fountain.txt  square1024.txt  square2025.txt  square3025.txt  square4096.txt  square5041.txt  square529.txt
src/: CMakeLists.txt  copyright.hpp.in  kernel.hpp  main.cpp  neighborsearch.hpp  render.hpp
test/: CMakeLists.txt  neighborsearch_and_kernel_test.cpp
util/: imageToScene.py
